# project_template

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: backend.hpp  frontend.hpp  virtual_backend.hpp  virtual_frontend.hpp
src/: CMakeLists.txt  virtual_backend.cpp  virtual_frontend.cpp
third/: CMakeLists.txt
